--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'GayoWineDemo';
+  src: url('./fonts/GayoWineDemo.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+.wineFont{
+  font-family: 'GayoWineDemo', sans-serif;
+
+}
+
 
 :root {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
@@ -12,3 +23,4 @@
   font-family: "Sora";
 
 }
+
